--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-<h1>Poncho</h1>
+<!DOCTYPE html>
+    <head>
+        /*Typografy*/
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Whisper&display=swap" rel="stylesheet">
+        /*JS & css*/
+        <link href="CSS\bootstrap-5.3.2-dist\css\bootstrap.css">
+        <link href="CSS\bootstrap-5.3.2-dist\css\main.css">
+        <link href="CSS\bootstrap-5.3.2-dist\js\bootstrap.bundle.js">
+    </head>
+    <body>
+        <div class="container-fuild">
+            /*Header*/
+            <header class="container">
+                <div class="text-center">
+                    <img src="..." class="rounded" alt="Alfonso Martínez">
+                    <h1 class="Whisper">Alfonso Martínez</h1>
+                    <h2>Fotografía</h2>
+                </div>
+            </header>
+        </div>
+    </body>
+</html>
