Conexión correcta de CSS

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Whisper&display=swap" rel="stylesheet">
         <!--JS & css-->
-        <link href="CSS\bootstrap-5.3.2-dist\css\bootstrap.css">
-        <link href="CSS\bootstrap-5.3.2-dist\css\main.css">
-        <link href="CSS\bootstrap-5.3.2-dist\js\bootstrap.bundle.js">
+        <link rel="stylesheet" src="CSS\bootstrap-5.3.2-dist\css\bootstrap.css">
+        <link rel="stylesheet" src="CSS\bootstrap-5.3.2-dist\css\main.css">
+        <link rel="stylesheet" src="CSS\bootstrap-5.3.2-dist\js\bootstrap.bundle.js">
     </head>
     <body>
         <div class="container-fuild">
-            <!--Header-->>
+            <!--Header-->
             <header class="container">
                 <div class="text-center">
                     <img src="..." class="rounded" alt="Alfonso Martínez">
