HTML restructurado, CSS conectado y agregando tipografías y lista de links

--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
+<html lang="es">
     <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <title>Alfonso Martínez Links</title>
+
+        <meta name="description" content="Sitio web de conexión de links de Alfonso Martínez">
+        <meta name="author" content="Alejandro Mendoza">
+        <meta name="keywords" content="Fotografía, Video, Contratación, Facebook, Instagram, WhatsApp">
+        <meta name="robots" content="index, follow">
+        <meta name="mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+
+        <!--JS & css-->
+        <link rel="stylesheet" type="text/css" href="CSS/bootstrap-5.3.2-dist/css/bootstrap.css">
+        <link rel="stylesheet" type="text/css" href="CSS/bootstrap-5.3.2-dist/css/main.css">
+        <link href="CSS/bootstrap-5.3.2-dist/js/bootstrap.js">
         <!--Typografy-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Whisper&display=swap" rel="stylesheet">
-        <!--JS & css-->
-        <link rel="stylesheet" src="CSS\bootstrap-5.3.2-dist\css\bootstrap.css">
-        <link rel="stylesheet" src="CSS\bootstrap-5.3.2-dist\css\main.css">
-        <link rel="stylesheet" src="CSS\bootstrap-5.3.2-dist\js\bootstrap.bundle.js">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Whisper&display=swap" rel="stylesheet">
+
+        <meta property="og:site_name" content="Alfonso Martínez Links">
+        <meta property="og:url" content="">
+        <meta property="og:title" content="Alfonso Martínez Links">
+        <meta property="og:description" content="Sitio web de conexión de links de Alfonso Martínez">
+        <meta property="og:type" content="website">
+        <meta property="og:locale" content="">
+        <meta property="og:image" content="">
     </head>
     <body>
         <div class="container-fuild">
@@ -15,10 +37,53 @@
             <header class="container">
                 <div class="text-center">
                     <img src="..." class="rounded" alt="Alfonso Martínez">
-                    <h1 class="Whisper">Alfonso Martínez</h1>
-                    <h2>Fotografía</h2>
+                    <h1 class="whisper">Alfonso Martínez</h1>
+                    <h2 class="montserrat_bold">Fotografía</h2>
+                    <p class="montserrat_p">Servicio de fotografía y video profesional.</p>
+                </div>
+                <div>
+                    <ul class="list-group list-group-horizontal ul-contenedor">
+                        <li class="list-group-item noborder-list ">
+                            <a href="https://www.instagram.com/amartz.photo/" target="_blank">
+                                <img src="IMG/icons/87390.png">
+                            </a>
+                        </li>
+                        <li class="list-group-item noborder-list">
+                            <a href="https://www.facebook.com/amartzphoto" target="_blank">
+                                <img src="IMG/icons/Facebook F.png">
+                            </a>
+                        </li>
+                        <li class="list-group-item noborder-list">
+                            <a href="https://wa.me/5218128795296" target="_blank">
+                                <img src="IMG/icons/whatsapp-logo_icon-icons.png">
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </header>
+            <div>
+                <div id="carouselExampleFade" class="carousel slide carousel-fade">
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="..." class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="..." class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="..." class="d-block w-100" alt="...">
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
         </div>
     </body>
 </html>
