--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <body>
         <div class="container-fuild">
             <!--Header-->
-            <header class="container">
+            <header class="container-sm">
                 <div class="text-center">
                     <img src="..." class="rounded" alt="Alfonso Martínez">
                     <h1 class="whisper">Alfonso Martínez</h1>
@@ -61,17 +61,17 @@
                     </ul>
                 </div>
             </header>
-            <div>
+            <div class="containter-sm">
                 <div id="carouselExampleFade" class="carousel slide carousel-fade">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="..." class="d-block w-100" alt="...">
+                        <img src="IMG/photo/f_1.jpg" class="d-block w-100" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
+                        <img src="IMG/photo/f_2.jpg" class="d-block w-100" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
+                        <img src="IMG/photo/f_3.jpg" class="d-block w-100" alt="...">
                       </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
