--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!--JS & css-->
         <link rel="stylesheet" type="text/css" href="CSS/bootstrap-5.3.2-dist/css/bootstrap.css">
         <link rel="stylesheet" type="text/css" href="CSS/bootstrap-5.3.2-dist/css/main.css">
-        <link href="CSS/bootstrap-5.3.2-dist/js/bootstrap.js">
+
         <!--Typografy-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,7 +36,7 @@
             <!--Header-->
             <header class="container-sm">
                 <div class="text-center">
-                    <img src="..." class="rounded" alt="Alfonso Martínez">
+                    <img src="IMG/photo/alfonso.jpg" class="img-rounded" alt="Alfonso Martínez">
                     <h1 class="whisper">Alfonso Martínez</h1>
                     <h2 class="montserrat_bold">Fotografía</h2>
                     <p class="montserrat_p">Servicio de fotografía y video profesional.</p>
@@ -61,29 +61,53 @@
                     </ul>
                 </div>
             </header>
-            <div class="containter-sm">
-                <div id="carouselExampleFade" class="carousel slide carousel-fade">
-                    <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img src="IMG/photo/f_1.jpg" class="d-block w-100" alt="...">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="IMG/photo/f_2.jpg" class="d-block w-100" alt="...">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="IMG/photo/f_3.jpg" class="d-block w-100" alt="...">
-                      </div>
+            <div class="container-sm">
+                <div class="container-fuild">
+                    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <img src="IMG/photo/f_1.jpg" class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="IMG/photo/f_2.jpg" class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="IMG/photo/f_3.jpg" class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="IMG/photo/f_4.jpg" class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="IMG/photo/f_5.jpg" class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="IMG/photo/f_6.jpg" class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="IMG/photo/f_7.jpg" class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="IMG/photo/f_8.jpg" class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="IMG/photo/f_9.jpg" class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="IMG/photo/f_10.jpg" class="d-block w-100" alt="...">
+                          </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Next</span>
-                    </button>
                 </div>
             </div>
         </div>
+        <script src="CSS/bootstrap-5.3.2-dist/js/bootstrap.js"></script>
     </body>
 </html>
