--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
         <link rel="stylesheet" type="text/css" href="CSS/bootstrap-5.3.2-dist/css/bootstrap.css">
         <link rel="stylesheet" type="text/css" href="CSS/bootstrap-5.3.2-dist/css/main.css">
 
+        <!--Favicon-->
+        <link rel="apple-touch-icon" sizes="180x180" href="IMG/favicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="IMG/favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="IMG/favicon/favicon-16x16.png">
+        <link rel="manifest" href="IMG/favicon/site.webmanifest">
+        <link rel="mask-icon" href="IMG/favicon/safari-pinned-tab.svg" color="#5bbad5">
+        <meta name="msapplication-TileColor" content="#da532c">
+        <meta name="theme-color" content="#ffffff">
+
         <!--Typografy-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
